style: resolve image alignment

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -206,7 +206,7 @@
 }
 
 .center img {
-  max-width: 600px; 
+  max-width: 600px;
   height: auto;
 }
 .site-footer-icons{
@@ -243,11 +243,15 @@
 }
 
 .markdown-body img {
-    max-width: 600px; 
+    max-width: 600px;
     height: auto;
     display: block;
+}
+
+.markdown-body img.align-center {
     margin: 0 auto;
 }
+
 @media (max-width: 640px){
     .markdown-body img{
         max-width: 100%;
